Fix: fix gap between google icon and kakao icon in singup page

--- a/signup/signup.css
+++ b/signup/signup.css
@@ -114,6 +114,12 @@
   background: var(--color-gray-20);
 }
 
+.signin-social-icons {
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
+}
+
 .signup-social-title {
   color: var(--color-gray-100);
   font-size: 14px;
